<resources>
    <string name="app_name">Calculadora Sdm Kt</string>
    <string name="ponto">.</string>
    <string name="zero">0</string>
    <string name="igual">=</string>
    <string name="dividir">/</string>
    <string name="multiplicar">x</string>
    <string name="tres">3</string>
    <string name="dois">2</string>
    <string name="um">1</string>
    <string name="subtrair">-</string>
    <string name="seis">6</string>
    <string name="cinco">5</string>
    <string name="quatro">4</string>
    <string name="adicao">+</string>
    <string name="nove">9</string>
    <string name="oito">8</string>
    <string name="sete">7</string>
    <string name="raiz">²√</string>
    <string name="porcentagem">%</string>
    <string name="desfazer">C</string>
    <string name="limpar">CE</string>
    <string-array name="tipo_leiaute">
        <item>Básico</item>
        <item>Avançado</item>
    </string-array>
</resources>
